k8s/common-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-service
  namespace: demo
  labels: { app: common-service, monitored: "true" }
spec:
  replicas: 1
  selector: { matchLabels: { app: common-service } }
  template:
    metadata: { labels: { app: common-service, monitored: "true" } }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: common-service
          image: ghcr.io/wilbertjoosen/demo-common-service:1.0.0-5949d11
          imagePullPolicy: Always
          ports: [{ containerPort: 8096 }]
          resources:
            requests: { cpu: "200m", memory: "384Mi" }
            limits: { cpu: "750m", memory: "640Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8096 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8096 }
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: common-service
  namespace: demo
  labels: { monitored: "true" }
spec:
  selector: { app: common-service }
  ports: [{ name: http, port: 8096, targetPort: 8096 }]
