k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: demo-qa
  labels: { app: notification-service, monitored: "true" }
spec:
  replicas: 1
  selector: { matchLabels: { app: notification-service } }
  template:
    metadata: { labels: { app: notification-service, monitored: "true" } }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: notification-service
          image: ghcr.io/wilbertjoosen/demo-notification-service:1.0.1-522bf29
          imagePullPolicy: Always
          ports: [{ containerPort: 8085 }]
          resources:
            requests: { cpu: "250m", memory: "448Mi" }
            limits: { cpu: "1", memory: "768Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8085 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8085 }
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: demo-qa
  labels: { monitored: "true" }
spec:
  selector: { app: notification-service }
  ports:
    - { name: http, port: 8085, targetPort: 8085 }
