k8s/product-comment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-comment-service
  namespace: demo-qa
  labels: { app: product-comment-service, monitored: "true" }
spec:
  replicas: 1
  selector: { matchLabels: { app: product-comment-service } }
  template:
    metadata: { labels: { app: product-comment-service, monitored: "true" } }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: product-comment-service
          image: ghcr.io/wilbertjoosen/demo-product-comment-service:1.0.1-7e68f28
          imagePullPolicy: Always
          ports: [{ containerPort: 8091 }]
          resources:
            requests: { cpu: "200m", memory: "384Mi" }
            limits: { cpu: "750m", memory: "640Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8091 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8091 }
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: product-comment-service
  namespace: demo-qa
  labels: { monitored: "true" }
spec:
  selector: { app: product-comment-service }
  ports: [{ name: http, port: 8091, targetPort: 8091 }]
