k8s/product-review-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-review-service
  namespace: demo
  labels: { app: product-review-service, monitored: "true" }
spec:
  replicas: 1
  selector: { matchLabels: { app: product-review-service } }
  template:
    metadata: { labels: { app: product-review-service, monitored: "true" } }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: product-review-service
          image: ghcr.io/wilbertjoosen/demo-product-review-service:12d4474669dcfcfe91f819879bbf25fb7f8f9292
          imagePullPolicy: Always
          ports: [{ containerPort: 8093 }]
          resources:
            requests: { cpu: "200m", memory: "384Mi" }
            limits: { cpu: "750m", memory: "640Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8093 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8093 }
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: product-review-service
  namespace: demo
  labels: { monitored: "true" }
spec:
  selector: { app: product-review-service }
  ports: [{ name: http, port: 8093, targetPort: 8093 }]
