k8s/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: demo-qa
  labels: { app: product-service, monitored: "true" }
spec:
  replicas: 1
  selector: { matchLabels: { app: product-service } }
  template:
    metadata: { labels: { app: product-service, monitored: "true" } }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: product-service
          image: ghcr.io/wilbertjoosen/demo-product-service:1.0.1-522bf29
          imagePullPolicy: Always
          ports: [{ containerPort: 8083 }]
          resources:
            requests: { cpu: "250m", memory: "448Mi" }
            limits: { cpu: "1", memory: "768Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8083 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8083 }
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: demo-qa
  labels: { monitored: "true" }
spec:
  selector: { app: product-service }
  ports: [{ name: http, port: 8083, targetPort: 8083 }]
