k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: demo
  labels: { app: user-service, monitored: "true" }
spec:
  replicas: 1
  selector: { matchLabels: { app: user-service } }
  template:
    metadata: { labels: { app: user-service, monitored: "true" } }
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: user-service
          image: ghcr.io/wilbertjoosen/demo-user-service:1.0.2-522bf29
          imagePullPolicy: Always
          ports: [{ containerPort: 8082 }]
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits: { cpu: "750m", memory: "640Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8082 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8082 }
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: demo
  labels: { monitored: "true" }
spec:
  selector: { app: user-service }
  ports: [{ name: http, port: 8082, targetPort: 8082 }]
